--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 <img src="IMG_6819.jpeg " alt "Vera and I at Njswim" class="center-img" style="max-width:50%;">
 </div>
 <div class="column">
-  <img src="IMG_1038.jpg" alt="Georgie and I Swimming">
-  <div class="column">
-    <img src="IMG_0015.jpg" alt="Murphy and I">
+<img src="IMG_1038.jpg " alt="Georgie and I Swimming">
+<div class="column">
+<img src="IMG_0015.jpg " alt="Murphy and I">
 
 <!--Let's talk a little about the future. After school what kind of job or career would you like to pursue? What is your reasoning for going on this path? How might it connect to all of these prior elements-field of study, home and family, interests and activities? Why is this job or career important to you? Why is it important generally?-->
 
 <div class="textblock" style="text-align: left">
-   <h2>In the Future</h2>
-  <h3> I am hoping to be a news anchor one day or work behind the scences of a production company. I use to watch the news with my mom everyday and so I've always imagined myself being in their position. Some of my favorite news anchors are George Stephanopoulos, Robin Roberts,  and Laura Spencer. They are the reason I am a communications major and pursuing a broadcasting career.</h3>
+  <h2>In the Future</h2>
+  <h3> I am hoping to be a news anchor one day or work behind the scences of a production company. I used to watch GMA with my mom everyday and so I've always imagined myself being in their position. Some of my favorite news anchors are George Stephanopoulos, Robin Roberts,  and Laura Spencer. They are the reason I am a communications major and pursuing a broadcasting career. </h3>
   </div>
 
   <div>
- <img src="IMG_5503 Alex.jpg" alt="describe the image HERE for accessibility purposes" class="none" style="max-width:100%;">
+ <img src="IMG_5503 Alex.jpg " alt="Alex and I" class="none" style="max-width:100%;">
     </div>
 
     <div id="logo">
